Moved some files from gen/ to interim/

--- a/runs/2014-01-13-cust-100/Makefile
+++ b/runs/2014-01-13-cust-100/Makefile
@@ -1,5 +1,5 @@
-# CUSTOMERS_FILE = gen/customers-100.txt
-CUSTOMERS_FILE = gen/customers-0.02.txt
-# CUSTOMERS_FILE = gen/customers-0.10.txt
+# CUSTOMERS_FILE = interim/customers-100.txt
+CUSTOMERS_FILE = interim/customers-0.02.txt
+# CUSTOMERS_FILE = interim/customers-0.10.txt
 # CUSTOMERS_FILE = data/publicChallenge.csv
 include ../../Makefile
